<resources>
    <string name="app_name">Pace Place</string>

    <string name="user_registration">User Registration</string>
    <string name="user_courses">User Courses</string>
    <string name="events">Events</string>
    <string name="post_events">Post Events</string>

    <string name="course_no_data_found">No course data found</string>

    <string name="course_register_issue_in_response_json">Issue in fetching Course Data for registration</string>
    <string name="course_issue_in_response_json">Issue in fetching Course Data</string>
    <string name="login_issue_in_response_json">Issue in fetching User Data</string>

    <string name="data_fetch_failed">Data fetching failed</string>
    <string name="enter_username">Email ID</string>
    <string name="enter_password">Password</string>
    <string name="btn_login_txt">Sign In</string>
    <string name="dont_have_accnt">Don\'t have an account ?</string>

    <string name="all_fields_required">Please provide all the mandatory fields</string>
    <string name="email_pass_required">Email and Password are mandatory fields</string>
    <string name="email_pass_not_valid">Email or Password is incorrect</string>
    <string name="conf_pass_and_pass_required">Password and Confirmation Password are mandatory fields and must be equal</string>

    <string name="signup">Sign Up</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="logout_success">Logout Success</string>

    <string name="user_profile_updated_success">User Profile updated successfully</string>
    <string name="register_success">Register Success</string>
    <string name="register_failed">User update failed</string>
    <string name="connection_failed">Connection Failed</string>

    <string name="course_registration_success">CourseRegistered successfully</string>

    <string name="rating_failed">Rating update failed</string>
    <string name="rating_successful">Rating update successful</string>
    <string name="all_fields_mandatory">All the fields are mandatory</string>

    <string name="please_wait">Please Wait...!!!</string>

    <string name="action_back">Back</string>
    <string name="btn_user_register">Register</string>
    <string name="course_register">Register</string>
    <string name="btn_save_txt">Save</string>
    <string name="btn_clear_txt">Clear</string>

    <string name="enter_firstname">First Name</string>
    <string name="enter_lastname">Last Name</string>
    <string name="enter_password_confirm">Confirm Password</string>
    <string name="enter_contact">Contact (---)--- ----</string>
    <string name="enter_dob">DOB</string>
    <string name="link_arrow"><![CDATA[>]]></string>
    <string name="dob_validation">Date of Birth must be past date</string>


    <!-- Course Details String Resources -->
    <string name="course_rating">Course Ratings : %s/5</string>
    <string name="course_credit">Credit : %s</string>
    <string name="course_professor">Professor : %s</string>
    <string name="course_professor_ratings">Professor Ratings : %s/5</string>
    <string name="course_day">Day : %s</string>
    <string name="course_time">Time : %s</string>
    <string name="course_room">Room : %s</string>
    <string name="course_start">Start : %s</string>
    <string name="course_end">End : %s</string>
    <string name="course_ratings">Course Ratings</string>
    <string name="prof_ratings">Professor Ratings</string>
    <string name="save_ratings_text">Save Ratings</string>

    <string name="course_load_fail">Course Loading Failed</string>
    <string name="multiple_course_with_same_name">Can\'t select same course again</string>

    <string name="save_text">Save</string>
    <string name="reset_text">Reset</string>

    <!-- Event Details String Resources -->
    <string name="post_event">Post Event</string>
    <string name="event_location">Event Location : %s , %s</string>
    <string name="event_conducted_for_subject">Course : %s</string>
    <string name="event_conducted_for">Level : %s</string>
    <string name="event_posted_by">Event Posted By : %s</string>
    <string name="events_not_found">No Event data found</string>
    <string name="event_issue_in_response_json">Issue in fetching Event Data</string>
    <string name="event_name_required">Event name is mandatory</string>
    <string name="event_desc_required">Event description is mandatory</string>
    <string name="event_date_validation">Event date must be future date</string>
    <string name="event_posted_success">Event posted successfully</string>
    <string name="event_posted_failed">Event post failed</string>
    <string name="event_name">Event Name *</string>
    <string name="event_date">Event Date *</string>
    <string name="event_description">Event Description *</string>
    <string name="btn_event_post_txt">Post</string>
    <string name="event_location_place">Event Location *</string>
    <string name="event_description_exceeds">Event Description cannot be more than 400 characters</string>

    <string name="mandatory_string">All the fields marked with * are mandatory</string>
    <string name="location_not_found">No Location data found</string>
    <string name="location_issue_in_response_json">Issue in fetching Location Data</string>
    <string name="static_issue_in_response_json">Issue in fetching Static Info Data</string>
</resources>
