<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/loginLogoLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">

        <ImageView
            android:id="@+id/loginLogoImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_logo_height"
            android:src="@mipmap/pace_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/loginLogoLL"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_height"
            android:layout_margin="@dimen/login_margin"
            android:hint="@string/enter_username"
            android:inputType="textEmailAddress"
            android:padding="@dimen/login_padding" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_height"
            android:layout_margin="@dimen/login_margin"
            android:hint="@string/enter_password"
            android:inputType="textWebPassword"
            android:padding="@dimen/login_padding" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_gravity="center"
            android:layout_margin="@dimen/login_margin"
            android:background="@drawable/rounded_button"
            android:fontFamily="serif"
            android:text="@string/btn_login_txt"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/btn_txt_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/login_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_accnt"
                android:textSize="@dimen/text_signup_size" />

            <TextView
                android:id="@+id/signupTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/login_padding"
                android:text="@string/signup"
                android:textSize="@dimen/text_signup_size"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
