<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:id="@+id/login_logo_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_logo_height"
            android:src="@mipmap/pace_logo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/login_logo_content"
        android:weightSum="6"
        android:orientation="vertical">
            <EditText
                android:id="@+id/login_username"
                android:padding="@dimen/login_padding"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_hieght"
                android:layout_marginStart="@dimen/login_margin"
                android:layout_marginEnd="@dimen/login_margin"
                android:visibility="visible"
                android:hint="@string/enter_username"/>
            <EditText
                android:id="@+id/login_password"
                android:padding="@dimen/login_padding"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_hieght"
                android:layout_marginTop="@dimen/login_margin"
                android:layout_marginStart="@dimen/login_margin"
                android:layout_marginEnd="@dimen/login_margin"
                android:visibility="visible"
                android:hint="@string/enter_password"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginStart="@dimen/login_margin"
                android:layout_marginTop="@dimen/login_margin"
                android:layout_marginEnd="@dimen/login_margin"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/btn_login_txt"
                android:textColor="@color/colorWhite"
                android:background="@drawable/rounded_button"
                android:fontFamily="serif"

                android:textSize="@dimen/btn_txt_size"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/login_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_accnt"
                    android:textSize="@dimen/text_signup_size"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/login_padding"
                    android:text="@string/signup"
                    android:textStyle="bold"
                    android:id="@+id/register_click_listener"
                    android:textSize="@dimen/text_signup_size"/>
            </LinearLayout>
    </LinearLayout>
</RelativeLayout>
