<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@mipmap/pace_logo"
        android:id="@+id/pace_logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pace_logo"
        android:orientation="horizontal"
        android:id="@+id/linear_pace_user_first"
        android:layout_marginTop="@dimen/login_margin_image">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="@dimen/layout_text_height"
            android:src="@mipmap/username"
            android:layout_marginStart="@dimen/login_margin_image"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_text_height"
            android:layout_marginStart="@dimen/login_margin"
            android:layout_marginEnd="@dimen/login_margin"
            android:id="@+id/regis_enter_username_first"
            android:hint="@string/enter_firstname"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_pace_user_first"
        android:orientation="horizontal"
        android:id="@+id/linear_pace_user"
        android:layout_marginTop="@dimen/login_margin_image">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="@dimen/layout_text_height"
            android:src="@mipmap/username"
            android:layout_marginStart="@dimen/login_margin_image"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_text_height"
            android:layout_marginStart="@dimen/login_margin"
            android:layout_marginEnd="@dimen/login_margin"
            android:id="@+id/regis_enter_username_last"
            android:hint="@string/enter_lastname"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_pace_user"
        android:orientation="horizontal"
        android:id="@+id/linear_pace_email"
        android:layout_marginTop="@dimen/login_margin_image"
        android:layout_marginStart="@dimen/login_margin_image">
        <ImageView

            android:layout_width="60dp"
            android:layout_height="@dimen/layout_text_height"
            android:src="@mipmap/mail"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_text_height"
            android:layout_marginStart="@dimen/login_margin"
            android:layout_marginEnd="@dimen/login_margin"
            android:id="@+id/regis_enter_email"
            android:hint="@string/enter_username"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_pace_email"
        android:orientation="horizontal"
        android:id="@+id/linear_pace_password"
        android:layout_marginStart="@dimen/login_margin_image"
        android:layout_marginTop="@dimen/login_margin_image">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="@dimen/layout_text_height"
            android:src="@mipmap/password"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_text_height"
            android:layout_marginStart="@dimen/login_margin"
            android:layout_marginEnd="@dimen/login_margin"
            android:id="@+id/regis_enter_pass"
            android:hint="@string/enter_password"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_pace_password"
        android:orientation="horizontal"
        android:id="@+id/linear_pace_password_confirm"
        android:layout_marginStart="@dimen/login_margin_image"
        android:layout_marginTop="@dimen/login_margin_image">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="@dimen/layout_text_height"
            android:src="@mipmap/password"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_text_height"
            android:layout_marginStart="@dimen/login_margin"
            android:layout_marginEnd="@dimen/login_margin"
            android:id="@+id/regis_enter_pass_confirm"
            android:hint="@string/enter_password_confirm"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_pace_password_confirm"
        android:orientation="horizontal"
        android:id="@+id/linear_pace_contact"
        android:layout_marginStart="@dimen/login_margin_image"
        android:layout_marginTop="@dimen/login_margin_image">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="@dimen/layout_text_height"
            android:src="@mipmap/contact"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_text_height"
            android:layout_marginStart="@dimen/login_margin"
            android:layout_marginEnd="@dimen/login_margin"
            android:id="@+id/regis_enter_contact"
            android:hint="@string/enter_contact"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_pace_contact"
        android:orientation="horizontal"
        android:id="@+id/linear_pace_dob"
        android:layout_marginStart="@dimen/login_margin_image"
        android:layout_marginTop="@dimen/login_margin_image">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="@dimen/layout_text_height"
            android:src="@mipmap/calendar"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_text_height"
            android:layout_marginStart="@dimen/login_margin"
            android:layout_marginEnd="@dimen/login_margin"
            android:id="@+id/regis_enter_dob"
            android:hint="@string/enter_dob"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_pace_dob"
        android:orientation="horizontal"
        android:id="@+id/linear_pace_buttons"
        android:layout_marginStart="@dimen/login_margin_image"
        android:layout_marginTop="@dimen/login_margin">
        <Button
            android:id="@+id/registerButton"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="@dimen/login_button_height"
            android:text="@string/btn_register_txt"
            android:textSize="@dimen/btn_txt_size"
            android:layout_marginLeft="@dimen/login_margin"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rounded_button"
            android:fontFamily="serif"
            />

        <Button
            android:layout_width="@dimen/login_button_width"
            android:layout_height="@dimen/login_button_height"
            android:text="@string/btn_clear_txt"
            android:textSize="@dimen/btn_txt_size"
            android:layout_marginLeft="@dimen/login_margin"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@drawable/rounded_button"
            android:fontFamily="serif"/>
    </LinearLayout>
</RelativeLayout>
